<resources>
    <string name="app_name">Firebase</string>
    <string name="facebook_app_id">3066054920284139</string>
    <string name="dialog_alert">Confirmar</string>
    <string name="dialog_progress">Aguarde…</string>
    <string name="sign_in_title">Login</string>
    <string name="sign_in_email">E-MAIL</string>
    <string name="sign_in_password">SENHA</string>
    <string name="sign_in_login">Login</string>
    <string name="sign_in_number">NÚMERO DE TELEFONE</string>
    <string name="sign_in_ddi">DDI</string>
    <string name="sign_in_recovery_password">Esqueceu sua senha?</string>
    <string name="sign_in_email_verify">Verifique seu endereço de email</string>
    <string name="sign_in_google">Tente novamente mais tarde</string>
    <string name="sign_in_new_acc">Não tem uma conta?</string>
    <string name="sign_in_register">Cadastrar-se</string>
    <string name="sign_up_title">Registrar</string>
    <string name="sign_up_email">EMAIL*</string>
    <string name="sign_up_password">SENHA*</string>
    <string name="sign_up_confirm_password">CONFIRMAR SENHA*</string>
    <string name="sign_up_name">NOME*</string>
    <string name="sign_up_cpf">CPF*</string>
    <string name="sign_up_gender">Gênero</string>
    <string name="sign_up_last_name">SOBRENOME*</string>
    <string name="sign_up_date">DATA DE NASCIMENTO*</string>
    <string name="sign_up_confirm">Confirmar</string>
    <string name="sign_up_registered">Usuário cadastrado com sucesso. Verifique seu endereço de email</string>
    <string name="sign_up_social">Usuário cadastrado com sucesso.</string>
    <string name="recovery_password_title">Recuperar senha</string>
    <string name="recovery_submit">Recuperar senha</string>
    <string name="recovery_message">Digite seu endereço de e-mail\n para recuperar sua senha.</string>
    <string name="recovery_email_send">Email enviado com sucesso!</string>
    <string name="error_register_user">Erro ao cadastrar usuário, tente novamente mais tarde</string>
    <string name="error_number_phone">Número de telefone inválido</string>
    <string name="error_password">Senha inválida</string>
    <string name="error_empty_field">Campo obrigatório</string>
    <string name="error_confirm_password_field">Senhas diferentes</string>
    <string name="error_date">Data de nascimento inválida</string>
    <string name="error_legal_document">CPF inválido</string>
    <string name="error_email">Email inválido</string>
    <string name="error_fields">Campos inválidos</string>
    <string name="error_number">Número de telefone inválido</string>
    <string name="or">ou</string>
    <string name="todo">todo</string>
    <string name="failure">Erro de conexão com o serviço,\ntente novamente mais tarde</string>
    <string name="last_update">Última atualização %s</string>
    <string name="profile_email">Email</string>
    <string name="profile_password">Senha</string>
    <string name="profile_name">Nome completo</string>
    <string name="profile_date">Data de nascimento</string>
    <string name="profile_save">Salvar alterações</string>
    <string name="profile_edit">Alterações salvas com sucesso</string>
    <string name="profile_phone">Telefone</string>
    <string name="profile_pw">987654321</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Pesquisar</string>
    <string name="menu_wishlist">Favoritos</string>
    <string name="menu_profile">Minha conta</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_post">Publicar</string>
    <string name="menu_discover">Descubra</string>
    <string name="menu_chat">Chat</string>
    <string name="content_login">Vantagens de um usuário logado:</string>
    <string name="content_description_login">* Salve seus filmes/séries favotiros na nuvem\n* Chat com outras pessoas\n* Publique postagens\n* Avalie filmes e séries</string>
    <string name="login_number_phone">Verificar número de telefone</string>
    <string name="login_git_hub">Entrar com Github</string>
    <string name="login_title">Firebase App</string>
    <string name="back">Voltar</string>
    <string name="phone_code_verification">Verifique o código enviado para o seu número de telefone</string>
    <string name="phone_resend_code">Reenviar código de verificação</string>
    <string name="code_verification">Código de verificação</string>
    <string name="verify_code_send">Verificar código</string>
    <string name="ddi_brazil">+55</string>
    <string name="man_radio">Homem</string>
    <string name="girl_radio">Mulher</string>
    <string name="other_radio">Outro</string>
    <string name="polity_privacy_text">Ao se cadastrar, você concorda com nossa\n <u>Política de Privacidade</u></string>
    <string name="home_message">Sem as permissões não é possivel executar o aplicativo corretamente.</string>
    <string name="movie_details_storyline">Enredo</string>
    <string name="play_trailer">Assistir videos</string>
    <string name="rate_movie">Avaliar</string>
    <string name="actors">Atores</string>
    <string name="about_movie">Sobre o filme</string>
    <string name="original_title">Título original:</string>
    <string name="type_movie">Tipo:</string>
    <string name="production_movie">Slogan:</string>
    <string name="premiere">Pré estreia:</string>
    <string name="description_movie">Países de produção:</string>
    <string name="creators_movie">Criadores</string>
    <string name="review_created">Criado em: %s</string>
    <string name="review_updated">Última atualização: %s</string>
    <string name="more_movies_like_this">Semelhantes</string>
    <string name="movies_recommendations">Recomendações</string>
    <string name="most_popular">Populares do cinema</string>
    <string name="see_more"><u>Ver mais</u></string>
    <string name="movie_show_time">Confira horários de\nexibição dos filmes</string>
    <string name="showcase_movie">Em exibição nos cinemas</string>
    <string name="showcase_tv">Em exibição nas televisões</string>
    <string name="showcase_more_movie"><u>VER MAIS</u></string>
    <string name="more_actors"><u>VER MAIS</u></string>
    <string name="best_actors">Melhores atores</string>
    <string name="popular_actors">Atores populares</string>
    <string name="enter_with_google">Entrar com Google</string>
    <string name="enter_with_facebook">Entrar com Facebook</string>
    <string name="enter_with_github">Entrar com Github</string>
    <string name="enter_with_number">Entrar com Número de telefone</string>
    <string name="enter_with_email">Entrar com E-mail</string>
    <string name="skip_back">Voltar</string>
    <string name="skip_login">Pular</string>
    <string name="next_login">Próximo</string>
    <string name="done_login">Continuar</string>
    <string name="enter_login"><u>Entrar</u></string>
    <string name="title_slider_1">Bem-vindo</string>
    <string name="title_slider_2">Pesquise tudo aqui</string>
    <string name="title_slider_3">Chat</string>
    <string name="title_slider_4">Seus favotiros</string>
    <string name="title_slider_5">Trailers e mais</string>
    <string name="description_slider_1">Obrigado por baixar Muvis App, divirta-se com este incrível aplicativo Android.</string>
    <string name="description_slider_2">Pesquise todo o conteúdo em um só lugar: filmes, séries de TV, canal de TV ao vivo e muito mais…</string>
    <string name="description_slider_3">Adicione pessoas, crie grupos, faça postagens sobre filmes, discussões, análises, e muito mais. Tudo isso dentro do nosso aplicativo.</string>
    <string name="description_slider_4">Filmes, atores e ou séries na sua lista de favoritos, experimente!</string>
    <string name="description_slider_5">Graças a API do Youtube, é possível visualizar os trailes disponíveis de filmes e séries através do nosso App e também, transmitir para a tela da sua TV</string>
    <string name="genres">Gêneros</string>
    <string name="genre_movie">Filmes</string>
    <string name="genre_tv">Tv</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_profile">Meu perfil</string>
    <string name="drawer_notification">Notificações</string>
    <string name="drawer_alter_password">Alterar senha</string>
    <string name="drawer_login">Entrar / Registrar</string>
    <string name="drawer_my_list">Favoritos</string>
    <string name="drawer_logout">Logout</string>
    <string name="drawer_settings">Configurações</string>
    <string name="drawer_rate">Avaliar</string>
    <string name="drawer_share">Compartilhar</string>
    <string name="drawer_help">Precisa de ajuda?</string>
    <string name="drawer_privacy">Política de privacidade</string>
    <string name="drawer_exit">Sair</string>
    <string name="search">Pesquisar</string>
    <string name="adult_content">Conteúdo adulto (pornografia)</string>
    <string name="filters">Filtros</string>
    <string name="search_by">Categorias</string>
    <string name="filter_on">ON</string>
    <string name="filter_off">OFF</string>
    <string name="filter_by_year">Ano/lançamento</string>
    <string name="filter_by_region">Região</string>
    <string name="filter_apply">Aplicar</string>
    <string name="filter_clear">Limpar</string>
    <string name="filter_remove_region">Não é possível filtrar por região e ano</string>
    <string name="filter_remove_year">Não é possível filtrar por ano</string>
    <string name="filter_error">Não foi possível aplicar o filtro</string>
    <string name="empty" />
    <string name="home_cine">Filmes nos cinemas</string>
    <string name="movie_last">Populares</string>
    <string name="home_popular_tv">Populares da televisão</string>
    <string name="home_top_rated_tv">Programas mais avaliados</string>
    <string name="home_top_rated_movie">Filmes mais avaliados</string>
    <string name="movie_favorite">Favoritar</string>
    <string name="movie_reviews">Avaliações (%s)</string>
    <string name="see_all_reviews"><u>Ver tudo</u></string>
    <string name="provider_movie">Fornecedores</string>
    <string name="crew_movie"><b><u>Equipe técnica:</u></b></string>
    <string name="company_production">Empresas de produção</string>
    <string name="know_for">Filmes / Programas / Séries</string>
    <string name="know_for_media">Elenco: %s</string>
    <string name="media_type_tv">Televisão</string>
    <string name="media_type_movie">Filme</string>
    <string name="people_biography">Biografia</string>
    <string name="people_about">Sobre o ator/produtor</string>
    <string name="people_department">Departamento:</string>
    <string name="people_birth_place">Local de nascimento:</string>
    <string name="people_know_as">Conhecido como:</string>
    <string name="people_tagged">Marcantes</string>
    <string name="error_load_video">Não foi possível carregar o video</string>
    <string name="details">Detalhes</string>
    <string name="coming">Chegando</string>
    <string name="trailer_not_found">Este filme não tem trailer</string>
    <string name="about_tv">Sobre</string>
    <string name="next_ep">Próximo episódio</string>
    <string name="last_ep">Último episódio</string>
    <string name="seasons">Temporadas (%s)</string>
    <string name="episodes">Episódios:</string>
    <string name="episodes_number">%d episódios</string>
    <string name="last_date_air">Última data do ar:</string>
    <string name="release_on">Lançado em %s</string>
    <string name="homepage">Pagina principal:</string>
    <string name="runtime_episodes">Durações dos episódios:</string>
    <string name="seasons_and_episodes">Episódios</string>
    <string name="created_by">Criado por:</string>
    <string name="last_season_ep">Temporada %d, episódio %d</string>
    <string name="previous_season">Anterior</string>
    <string name="next_season">Próximo</string>
    <string name="especial">Especiais</string>
</resources>