<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeApp"
            android:icon="@drawable/ic_home"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/profileApp"
            android:icon="@drawable/ic_account"
            android:title="@string/drawer_profile" />
        <item
            android:id="@+id/notificationApp"
            android:icon="@drawable/ic_notification"
            android:title="@string/drawer_notification" />
        <item
            android:id="@+id/loginRegisterApp"
            android:icon="@drawable/ic_login"
            android:title="@string/drawer_login" />
        <item
            android:id="@+id/myListApp"
            android:icon="@drawable/ic_folder"
            android:title="@string/drawer_my_list" />
        <item
            android:id="@+id/logoutApp"
            android:icon="@drawable/ic_logout"
            android:title="@string/drawer_logout" />
        <item
            android:id="@+id/settingsApp"
            android:icon="@drawable/ic_settings"
            android:title="@string/drawer_settings" />
    </group>

    <item android:title="@string/app_name">

        <menu>
            <item
                android:id="@+id/rateApp"
                android:icon="@drawable/ic_star"
                android:title="@string/drawer_rate" />
            <item
                android:id="@+id/shareApp"
                android:icon="@drawable/ic_share"
                android:title="@string/drawer_share" />
            <item
                android:id="@+id/helpApp"
                android:icon="@drawable/ic_help"
                android:title="@string/drawer_help" />
            <item
                android:id="@+id/polityApp"
                android:icon="@drawable/ic_lock"
                android:title="@string/drawer_privacy" />
            <item
                android:id="@+id/exitApp"
                android:icon="@drawable/ic_exit"
                android:title="@string/drawer_exit" />
        </menu>

    </item>

</menu>
