<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:background="@color/gray_background"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_github" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:hint="@string/sign_in_email"
        android:textColorHint="@color/yellow_dark"
        app:boxStrokeColor="@color/yellow_dark"
        app:boxStrokeErrorColor="@color/red"
        app:errorTextColor="@color/red"
        app:helperTextTextColor="@color/yellow_dark"
        app:hintTextColor="@color/yellow_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/yellow_dark"
            android:textCursorDrawable="@drawable/background_cursor"
            tools:text="pedrominuzzi21@gmail.com">

            <requestFocus />

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginWithGitHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/background_button_rectangle"
        android:backgroundTint="@color/green"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/stellar_bold"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/login_git_hub"
        android:textColor="@color/black" />

</androidx.appcompat.widget.LinearLayoutCompat>