<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_github" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="32dp"
        android:elevation="5dp"
        android:hint="@string/sign_in_email"
        app:boxCollapsedPaddingTop="0dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidth="0.5dp"
        app:boxStrokeWidthFocused="0.5dp"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:imeOptions="actionNext"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:maxLength="42"
            android:nextFocusDown="@id/passwordField"
            android:paddingStart="1dp"
            android:paddingTop="16dp"
            android:paddingEnd="0dp"
            android:paddingBottom="4dp"
            tools:text="pedrominuzzi21@gmail.com">

            <requestFocus />

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginWithGitHub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/blue"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/stellar_bold"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/login_git_hub"
        android:textColor="@color/black" />

</androidx.appcompat.widget.LinearLayoutCompat>